--- a/louvre-memory/index.html
+++ b/louvre-memory/index.html
@@ -67,8 +67,8 @@ const EPOCHS = Array.from({length: 10}, (_, i) => ({
   id: `tema${i+1}`,
   name: `Tema ${i+1}`,
   files: [
-    {type:'text', name:`tema${i+1}.txt`, src:`media/epoca${i+1}/tema${i+1}.txt`},
-    {type:'video', name:'video.mp4', src:`media/epoca${i+1}/video.mp4`}
+    {type:'text', name:`tema${i+1}.txt`, src:`media/tema${i+1}/tema${i+1}.txt`},
+    {type:'video', name:'video.mp4', src:`media/tema${i+1}/video.mp4`}
   ]
 }));
 
