--- a/louvre-memory/index.html
+++ b/louvre-memory/index.html
@@ -1,58 +1,55 @@
 <!DOCTYPE html>
 <html lang="it">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Louvre Memory — Archivio Collettivo</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Louvre Memory — Terminale</title>
   <link rel="stylesheet" href="style/main.css">
   <script src="https://unpkg.com/@supabase/supabase-js@2"></script>
 </head>
 <body>
 
-<!-- INTRO -->
-<section id="intro" class="screen">
-  <div class="intro-box">
-    <h1>Louvre Memory</h1>
-    <p class="subtitle">Partecipa alla costruzione della memoria del Louvre.</p>
+<!-- SCHERMATA TERMINALE INIZIALE -->
+<section id="intro" class="screen terminal">
+  <div class="terminal-box">
+    <div class="line">> Benvenuto nella memoria profonda del Louvre.</div>
+    <div class="line">> Seleziona l'epoca che riconosci come tua.</div>
+    <div class="line">&nbsp;</div>
 
-    <form id="memoryForm">
+    <div id="themeGrid" class="theme-grid-terminal">
+      <div class="theme-option" data-value="tema1">[ ] Tema 1</div>
+      <div class="theme-option" data-value="tema2">[ ] Tema 2</div>
+      <div class="theme-option" data-value="tema3">[ ] Tema 3</div>
+      <div class="theme-option" data-value="tema4">[ ] Tema 4</div>
+      <div class="theme-option" data-value="tema5">[ ] Tema 5</div>
+      <div class="theme-option" data-value="tema6">[ ] Tema 6</div>
+      <div class="theme-option" data-value="tema7">[ ] Tema 7</div>
+      <div class="theme-option" data-value="tema8">[ ] Tema 8</div>
+      <div class="theme-option" data-value="tema9">[ ] Tema 9</div>
+      <div class="theme-option" data-value="tema10">[ ] Tema 10</div>
+    </div>
 
-      <label>Scegli un tema:</label>
-      <div id="themeGrid" class="theme-grid">
-        <div class="theme-option" data-value="tema1">Tema 1</div>
-        <div class="theme-option" data-value="tema2">Tema 2</div>
-        <div class="theme-option" data-value="tema3">Tema 3</div>
-        <div class="theme-option" data-value="tema4">Tema 4</div>
-        <div class="theme-option" data-value="tema5">Tema 5</div>
-        <div class="theme-option" data-value="tema6">Tema 6</div>
-        <div class="theme-option" data-value="tema7">Tema 7</div>
-        <div class="theme-option" data-value="tema8">Tema 8</div>
-        <div class="theme-option" data-value="tema9">Tema 9</div>
-        <div class="theme-option" data-value="tema10">Tema 10</div>
-      </div>
+    <div class="line">> Inserisci la tua firma:</div>
+    <input id="visitorName" class="terminal-input" maxlength="40" autocomplete="off">
 
-      <label>Il tuo nome:</label>
-      <input id="visitorName" type="text" maxlength="40" required>
+    <div class="line">> Scrivi la parte di memoria che riconosci:</div>
+    <textarea id="visitorText" class="terminal-input area" rows="5" maxlength="1000"></textarea>
 
-      <label>Scrivi il tuo ricordo:</label>
-      <textarea id="visitorText" rows="6" maxlength="1000" required></textarea>
-
-      <button type="submit">Invia</button>
-    </form>
+    <button id="submitBtn" class="terminal-btn">CONFERMA</button>
   </div>
 </section>
 
-<!-- RISULTATO -->
-<section id="overlay" class="screen hidden">
-  <div class="overlay-box">
-    <p id="resultText"></p>
-    <button id="continueBtn">Continua</button>
+<!-- OVERLAY PERCENTUALE -->
+<section id="overlay" class="screen hidden terminal">
+  <div class="terminal-box center-box">
+    <div id="resultText" class="line"></div>
+    <button id="continueBtn" class="terminal-btn">CONTINUA</button>
   </div>
 </section>
 
 <!-- DESKTOP -->
-<section id="desktop" class="hidden">
-  <div id="topbar">Archivio della memoria collettiva</div>
+<section id="desktop" class="hidden desktop">
+  <div id="topbar">ARCHIVIO COMPLETO DELLA MEMORIA</div>
   <div id="iconGrid"></div>
 </section>
 
@@ -62,149 +59,118 @@ const SUPABASE_URL = "https://fxthdtvorfzgrbywyrjn.supabase.co";
 const SUPABASE_KEY = "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6ImZ4dGhkdHZvcmZ6Z3JieXd5cmpuIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjIyNjM4MjgsImV4cCI6MjA3NzgzOTgyOH0.Tk9HK_CadJ1p8YIJN5RRGforhVsuMxfpEptbhD4bBmM";
 const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_KEY);
 
-// --- TEMI / FILE ASSOCIATI ---
+// TEMI
 const EPOCHS = Array.from({length: 10}, (_, i) => ({
   id: `tema${i+1}`,
   name: `Tema ${i+1}`,
   files: [
-    {type:'text', name:`tema${i+1}.txt`, src:`media/tema${i+1}/tema${i+1}.txt`},
-    {type:'video', name:'video.mp4', src:`media/tema${i+1}/video.mp4`}
+    {type:'text', name:`tema${i+1}.txt`, src:`media/epoca${i+1}/tema${i+1}.txt`},
+    {type:'video', name:'video.mp4', src:`media/epoca${i+1}/video.mp4`}
   ]
 }));
-
-// ELEMENTI UI
-const form = document.getElementById("memoryForm");
-const intro = document.getElementById("intro");
-const overlay = document.getElementById("overlay");
-const desktop = document.getElementById("desktop");
-const resultText = document.getElementById("resultText");
-const continueBtn = document.getElementById("continueBtn");
-const grid = document.getElementById("iconGrid");
 
 let selectedTheme = null;
 let userData = {};
 
-// SELEZIONE TEMA CON TICK
-document.querySelectorAll(".theme-option").forEach(opt => {
+// Selezione tema
+document.querySelectorAll('.theme-option').forEach(opt => {
   opt.onclick = () => {
-    document.querySelectorAll(".theme-option").forEach(o => o.classList.remove("selected"));
-    opt.classList.add("selected");
+    document.querySelectorAll('.theme-option').forEach(o => o.textContent = o.textContent.replace('✓',' ').replace('[x]','[ ]'));
+    opt.textContent = '[x] ' + opt.textContent.replace('[ ] ','').replace('[x] ','');
     selectedTheme = opt.dataset.value;
   };
 });
 
-// SUBMIT
-form.addEventListener("submit", async e => {
-  e.preventDefault();
-  const tema = selectedTheme;
-  const nome = document.getElementById("visitorName").value.trim();
-  const testo = document.getElementById("visitorText").value.trim();
+// Submit
+submitBtn.onclick = async () => {
+  const nome = visitorName.value.trim();
+  const testo = visitorText.value.trim();
+  if(!selectedTheme || !nome || !testo) return;
 
-  if (!tema || !nome || !testo) return;
-
-  userData = { tema, nome, testo };
-  await supabase.from("memories").insert([userData]);
+  userData = { tema: selectedTheme, nome, testo };
+  await supabase.from('memories').insert([userData]);
 
   const perc = 10 + Math.min(10, Math.round(testo.length / 20));
-  intro.classList.add("hidden");
-  overlay.classList.remove("hidden");
-  resultText.innerHTML = `Ti ricordi il Louvre per il <b>${perc}%</b> della sua memoria.`;
-});
 
-// CONTINUA → DESKTOP
+  intro.classList.add('hidden');
+  overlay.classList.remove('hidden');
+  resultText.innerHTML = `> Conosci il Louvre al <b>${perc}%</b>.`;
+
+  openFolder(EPOCHS.find(e => e.id === selectedTheme));
+};
+
 continueBtn.onclick = () => {
-  overlay.classList.add("hidden");
+  overlay.classList.add('hidden');
   showDesktop();
 };
 
-// DESKTOP
-async function showDesktop() {
-  desktop.classList.remove("hidden");
-  grid.innerHTML = "";
+function showDesktop(){
+  desktop.classList.remove('hidden');
+  iconGrid.innerHTML = '';
 
-  // Aggiungi cartelle dei temi
   EPOCHS.forEach(ep => {
-    const icon = document.createElement("div");
-    icon.className = "icon";
+    const icon = document.createElement('div');
+    icon.className = 'icon';
     icon.innerHTML = `<div class="glyph">📁</div><div class="name">${ep.name}</div>`;
     icon.onclick = () => openFolder(ep);
-    grid.appendChild(icon);
+    iconGrid.appendChild(icon);
   });
 
-  // Aggiungi ricordi da Supabase
-  const { data } = await supabase.from("memories").select("*").order("created_at", {ascending:false});
+  loadAllMemories();
+}
+
+async function loadAllMemories(){
+  const { data } = await supabase.from('memories').select('*').order('created_at',{ascending:false});
   data.forEach(mem => {
-    const icon = document.createElement("div");
-    icon.className = "icon";
-    icon.innerHTML = `<div class="glyph">📄</div><div class="name">ricordo di ${mem.nome}.txt</div>`;
+    const icon = document.createElement('div');
+    icon.className = 'icon';
+    icon.innerHTML = `<div class="glyph">📄</div><div class="name">ricordo di ${mem.nome}</div>`;
     icon.onclick = () => openUserMemory(mem);
-    grid.appendChild(icon);
+    iconGrid.appendChild(icon);
   });
 }
 
-// FINESTRA TEMA
-function openFolder(ep) {
-  const win = document.createElement("div");
-  win.className = "window";
+function openFolder(ep){
+  const win = document.createElement('div');
+  win.className = 'window';
   win.innerHTML = `
-    <div class="titlebar">
-      <div class="title">${ep.name}</div>
-      <div class="buttons"><div class="btn" data-close>X</div></div>
-    </div>
+    <div class="titlebar">${ep.name}<div class="btn" data-close>X</div></div>
     <div class="content">
       <div class="sidebar" data-files></div>
-      <div class="viewer" data-viewer><div style="color:#555">Seleziona un file</div></div>
+      <div class="viewer" data-viewer><div style="opacity:.5;">Attendi...</div></div>
     </div>`;
   document.body.appendChild(win);
 
-  const files = win.querySelector("[data-files]");
-  const viewer = win.querySelector("[data-viewer]");
+  const files = win.querySelector('[data-files]');
+  const viewer = win.querySelector('[data-viewer]');
 
   ep.files.forEach(f => {
-    const fe = document.createElement("div");
-    fe.className = "file";
-    fe.textContent = f.name;
-    fe.onclick = () => openFile(f, viewer);
+    const fe = document.createElement('div'); fe.className = 'file'; fe.textContent = f.name;
+    fe.onclick = () => openFile(f,viewer);
     files.appendChild(fe);
   });
 
-  win.querySelector("[data-close]").onclick = () => win.remove();
+  win.querySelector('[data-close]').onclick = () => win.remove();
 }
 
-// APRI FILE
-async function openFile(f, viewer) {
-  viewer.innerHTML = "";
-
-  if (f.type === "text") {
+async function openFile(f,viewer){
+  viewer.innerHTML = '';
+  if(f.type==='text'){
     const txt = await (await fetch(f.src)).text();
-    const pre = document.createElement("pre");
-    pre.textContent = txt;
+    const pre = document.createElement('pre'); pre.textContent = txt;
     viewer.appendChild(pre);
-  }
-
-  if (f.type === "video") {
-    const v = document.createElement("video");
-    v.src = f.src;
-    v.controls = true;
-    v.autoplay = true;
-    viewer.appendChild(v);
+  } else {
+    const v = document.createElement('video'); v.src=f.src; v.controls=true; v.autoplay=true; viewer.appendChild(v);
   }
 }
 
-// APRI RICORDO COLLETTIVO
-function openUserMemory(data) {
-  const win = document.createElement("div");
-  win.className = "window";
-  win.innerHTML = `
-    <div class="titlebar">
-      <div class="title">ricordo di ${data.nome}.txt</div>
-      <div class="buttons"><div class="btn" data-close>X</div></div>
-    </div>
-    <div style="padding:10px;white-space:pre-wrap;">${data.testo}</div>`;
+function openUserMemory(data){
+  const win = document.createElement('div'); win.className='window';
+  win.innerHTML = `<div class="titlebar">ricordo di ${data.nome}<div class="btn" data-close>X</div></div><div class="viewer-text">${data.testo}</div>`;
   document.body.appendChild(win);
-  win.querySelector("[data-close]").onclick = () => win.remove();
+  win.querySelector('[data-close]').onclick = () => win.remove();
 }
-
 </script>
+
 </body>
 </html>
