--- a/louvre-memory/index.html
+++ b/louvre-memory/index.html
@@ -57,16 +57,17 @@ body, input, textarea, button, pre, .theme-option, .icon, .titlebar, .file, .vie
     <div class="line">&nbsp;</div>
 
     <div id="themeGrid" class="theme-grid-terminal">
-      <div class="theme-option" data-value="tema1">[ ] Tema 1</div>
-      <div class="theme-option" data-value="tema2">[ ] Tema 2</div>
-      <div class="theme-option" data-value="tema3">[ ] Tema 3</div>
-      <div class="theme-option" data-value="tema4">[ ] Tema 4</div>
-      <div class="theme-option" data-value="tema5">[ ] Tema 5</div>
-      <div class="theme-option" data-value="tema6">[ ] Tema 6</div>
-      <div class="theme-option" data-value="tema7">[ ] Tema 7</div>
-      <div class="theme-option" data-value="tema8">[ ] Tema 8</div>
-      <div class="theme-option" data-value="tema9">[ ] Tema 9</div>
-      <div class="theme-option" data-value="tema10">[ ] Tema 10</div>
+      <div class="theme-option" data-value="tema1">[ ] Il Louvre Fortezza</div>
+      <div class="theme-option" data-value="tema2">[ ] Il Louvre Rinascimentale</div>
+      <div class="theme-option" data-value="tema3">[ ] Il Louvre dello Stato Assoluto</div>
+      <div class="theme-option" data-value="tema4">[ ] Il Louvre Rivoluzionario</div>
+      <div class="theme-option" data-value="tema5">[ ] Il Louvre Napoleonico</div>
+      <div class="theme-option" data-value="tema6">[ ] Il Louvre Ottocento–Novecento</div>
+      <div class="theme-option" data-value="tema7">[ ] Il Louvre Contemporaneo / Grand Louvre</div>
+      <div class="theme-option" data-value="tema8">[ ] Il Louvre della Gioconda</div>
+      <div class="theme-option" data-value="tema9">[ ] Il Louvre di Parigi</div>
+      <div class="theme-option" data-value="tema10">[ ] Il Louvre dei Furti</div>
+      <div class="theme-option" data-value="tema10">[ ] Il Louvre della piramide</div>
     </div>
 
     <div class="line">> Inserisci la tua firma:</div>
